# page-title

./: .pre-commit-config.yaml  README.md  pyproject.toml
page-title/: pyproject.toml
page-title/page_title/: add_titles.py  comments.py  file_types.py
page-title/tests/: test_add_titles.py  test_comments.py  test_page_title.py
page-title/tests/data/: comments.py
page_title/: __init__.py  add_titles.py  comments.py  file_types.py
tests/: test_add_titles.py
tests/data/: add_titles.py  comments.py
tests/data/test_dir/test_dir/: test.js
